--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,23 +41,23 @@ jobs:
 
       - name: Build
         run: |-
-          docker build -t sergway/multi-client-k8s-gh:latest -t sergway/multi-client-k8s-gh:${{ env.SHA }} -f ./client/Dockerfile ./client
-          docker build -t sergway/multi-server-k8s-pgfix-gh:latest -t sergway/multi-server-k8s-pgfix-gh:${{ env.SHA }} -f ./server/Dockerfile ./server
-          docker build -t sergway/multi-worker-k8s-gh:latest -t sergway/multi-worker-k8s-gh:${{ env.SHA }} -f ./worker/Dockerfile ./worker
+          docker build -t sergway/multi-client-k8s:latest -t sergway/multi-client-k8s:${{ env.SHA }} -f ./client/Dockerfile ./client
+          docker build -t sergway/multi-server-k8s:latest -t sergway/multi-server-k8s:${{ env.SHA }} -f ./server/Dockerfile ./server
+          docker build -t sergway/multi-worker-k8s:latest -t sergway/multi-worker-k8s:${{ env.SHA }} -f ./worker/Dockerfile ./worker
 
       - name: Push
         run: |-
-          docker push sergway/multi-client-k8s-gh:latest
-          docker push sergway/multi-server-k8s-pgfix-gh:latest
-          docker push sergway/multi-worker-k8s-gh:latest
+          docker push sergway/multi-client-k8s:latest
+          docker push sergway/multi-server-k8s:latest
+          docker push sergway/multi-worker-k8s:latest
 
-          docker push sergway/multi-client-k8s-gh:${{ env.SHA }}
-          docker push sergway/multi-server-k8s-pgfix-gh:${{ env.SHA }}
-          docker push sergway/multi-worker-k8s-gh:${{ env.SHA }}
-
+          docker push sergway/multi-client-k8s:${{ env.SHA }}
+          docker push sergway/multi-server-k8s:${{ env.SHA }}
+          docker push sergway/multi-worker-k8s:${{ env.SHA }}
+      # you can update pods with kubectl rollout restart deployment/server-deployment and the option restartPolicy
       - name: Apply
         run: |-
           kubectl apply -f k8s
-          kubectl set image deployments/server-deployment server=sergway/multi-server-k8s-pgfix-gh:${{ env.SHA }}
-          kubectl set image deployments/client-deployment client=sergway/multi-client-k8s-gh:${{ env.SHA }}
-          kubectl set image deployments/worker-deployment worker=sergway/multi-worker-k8s-gh:${{ env.SHA }}
+          kubectl set image deployments/server-deployment server=sergway/multi-server-k8s:${{ env.SHA }}
+          kubectl set image deployments/client-deployment client=sergway/multi-client-k8s:${{ env.SHA }}
+          kubectl set image deployments/worker-deployment worker=sergway/multi-worker-k8s:${{ env.SHA }}
